--- a/upload_data.ipynb
+++ b/upload_data.ipynb
@@ -288,6 +288,151 @@
    "source": [
     "df.head(n=0).to_sql(name='yellow_taxi_data', con=engine, if_exists='replace')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "engine= create_engine('postgresql://root:root@localhost:5432/ny_taxi')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_zones = pd.read_csv('taxi_zone_lookup.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LocationID</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Zone</th>\n",
+       "      <th>service_zone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>EWR</td>\n",
+       "      <td>Newark Airport</td>\n",
+       "      <td>EWR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>Jamaica Bay</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>Allerton/Pelham Gardens</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Alphabet City</td>\n",
+       "      <td>Yellow Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Staten Island</td>\n",
+       "      <td>Arden Heights</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LocationID        Borough                     Zone service_zone\n",
+       "0           1            EWR           Newark Airport          EWR\n",
+       "1           2         Queens              Jamaica Bay    Boro Zone\n",
+       "2           3          Bronx  Allerton/Pelham Gardens    Boro Zone\n",
+       "3           4      Manhattan            Alphabet City  Yellow Zone\n",
+       "4           5  Staten Island            Arden Heights    Boro Zone"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_zones.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "265"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_zones.to_sql(name='zones', con=engine, if_exists='replace')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
